--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,19 @@
-/* Estilos generales */
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,200&family=Lobster&display=swap');
 
 
 body {
-    font-family: 'Kanit', sans-serif; /* Fuente predeterminada */
+    font-family: 'Kanit', sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-h1, h2, h3 {
-    font-family: 'Lobster', sans-serif; /* Fuente para títulos */
+h1,
+h2,
+h3 {
+    font-family: 'Lobster', sans-serif;
 }
 
 header {
@@ -36,6 +40,7 @@ nav a {
 
 main {
     padding: 20px;
+    flex: 1;
 }
 
 footer {
@@ -45,6 +50,7 @@ footer {
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
+
 }
 
 .redes-sociales {
@@ -94,7 +100,6 @@ h2 {
     border-radius: 5px;
 }
 
-/* Estilos para el cartel "LIVE" */
 .live-badge {
     position: absolute;
     top: 20px;
@@ -107,70 +112,7 @@ h2 {
     z-index: 1;
 }
 
-/* Estilos para dispositivos móviles */
-@media (max-width: 768px) {
-    header {
-        padding: 5px 0;
-    }
 
-    nav ul li {
-        margin-right: 10px;
-    }
-
-    main {
-        padding: 10px;
-    }
-
-    .grid-container {
-        display: block;
-    }
-
-    .evento {
-        margin-bottom: 20px;
-    }
-}
-
-/* Estilos para tabletas */
-@media (min-width: 769px) and (max-width: 1024px) {
-    header {
-        padding: 10px 0;
-    }
-
-    nav ul li {
-        margin-right: 15px;
-    }
-
-    main {
-        padding: 20px;
-    }
-
-    .grid-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-    }
-}
-
-/* Estilos para escritorio */
-@media (min-width: 1025px) {
-    header {
-        padding: 20px 0;
-    }
-
-    nav ul li {
-        margin-right: 20px;
-    }
-
-    main {
-        padding: 30px;
-    }
-
-    .grid-container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 30px;
-    }
-}
 
 form {
     width: 60%;
@@ -206,18 +148,17 @@ form input[type="submit"]:hover {
     background-color: #555;
 }
 
-/* Estilos para la grilla de eventos */
 .evento .live-badge {
     position: absolute;
-    top: 20px; /* Ajusta la posición vertical en la esquina superior */
-    right: 20px; /* Ajusta la posición horizontal en la esquina derecha */
+    top: 20px;
+    right: 20px;
     background-color: red;
     color: #fff;
     padding: 5px 10px;
     border-radius: 5px;
     font-weight: bold;
     z-index: 1;
-}/* ... Tu otro CSS ... */
+}
 
 .evento {
     position: relative;
@@ -231,11 +172,10 @@ form input[type="submit"]:hover {
     position: relative;
 }
 
-/* Estilos para el cartel "LIVE" */
 .evento .live-badge {
     position: absolute;
-    top: 20px; /* Ajusta la posición vertical en la esquina superior */
-    right: 20px; /* Ajusta la posición horizontal en la esquina derecha */
+    top: 20px;
+    right: 20px;
     background-color: red;
     color: #fff;
     padding: 5px 10px;
@@ -251,9 +191,8 @@ form input[type="submit"]:hover {
 }
 
 
-/* Estilos para el banner */
 #inicio {
-    background-image: url('banner.png');
+    background-image: url('/css/img/banner.png');
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -264,21 +203,20 @@ form input[type="submit"]:hover {
 #inicio h2 {
     font-size: 36px;
     margin: 20px 0;
-    color:black;
+    color: black;
 }
 
 #inicio p {
     font-size: 18px;
 }
 
-/* Estilos para la lista de canales */
 .canales-deportivos {
     list-style: none;
     padding: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin:0 5% 0 5%;
+    margin: 0 5% 0 5%;
 }
 
 .canales-deportivos li {
@@ -289,12 +227,12 @@ form input[type="submit"]:hover {
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 5px;
-    
+
 }
 
 .canales-deportivos img {
     max-width: 100%;
-    width:100px;
+    width: 100px;
     height: auto;
 }
 
@@ -308,9 +246,70 @@ form input[type="submit"]:hover {
     margin-top: 10px;
 }
 
-/* Estilos para dispositivos móviles */
 @media (max-width: 768px) {
     .canales-deportivos li {
         width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        padding: 5px 0;
+    }
+
+    nav ul li {
+        margin-right: 10px;
+    }
+
+    main {
+        padding: 10px;
+    }
+
+    .grid-container {
+        display: block;
+    }
+
+    .evento {
+        margin-bottom: 20px;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    header {
+        padding: 10px 0;
+    }
+
+    nav ul li {
+        margin-right: 15px;
+    }
+
+    main {
+        padding: 20px;
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+}
+
+@media (min-width: 1025px) {
+    header {
+        padding: 20px 0;
+    }
+
+    nav ul li {
+        margin-right: 20px;
+    }
+
+    main {
+        padding: 30px;
+    }
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
     }
 }
